--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "Project 2",
+  "name": "projectresume",
   "version": "1.0.0",
-  "description": "Project 2 Starter",
+  "description": "* Team Member Emily Raper Anjana Hengaju Dmitriy Petrenko Ben p",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "lint": "eslint **/*.js --quiet",
-    "fix": "eslint --fix .",
-    "test": "npm run lint && cross-env NODE_ENV=test mocha -u tdd --reporter spec --exit"
+  "directories": {
+    "test": "test"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/emilyr47/projectResume.git"
+  },
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/emilyr47/projectResume/issues"
+  },
+  "homepage": "https://github.com/emilyr47/projectResume#readme",
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
@@ -17,15 +27,5 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.5"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "mocha": "^5.2.0",
-    "prettier": "^1.13.7"
   }
 }
