--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^3.0.2",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.8.5"
+    "nodemailer": "^6.1.1",
+    "sequelize": "^5.8.6"
   }
 }
